docs(service): 完善后端技术选型与相关文档
- tech-stack.md 内置能力表格按功能域分组，去除与依赖清单重复条目
- 6.3 安全与权限对齐 access-control/security 设计文档（四层模型）
- 3.4 补充 Neo4j ReBAC 和 Redis 权限缓存选型
- 同步更新模块结构、架构设计、编码风格、任务文档等关联文件